--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <header>
+      <div class="header__bar row">
+        <h1 class="grid-6"><a href="/">mercari</a></h1>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "マイページ" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+            <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+          </div>
+        <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
