--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,137 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.container {
+  position: relative;
+  min-height: 100%;
+  font-size: 14px;
+  color: rgb(51, 51, 51);
+  background-color: rgb(245, 245, 245);
+  .item-box {
+    padding: 24px 40px 40px;
+    margin: 40px auto 0;
+    width: 700px;
+    background-color: white;
+    &__name {
+      font-size: 24px;
+      text-align: center;
+      word-wrap: break-word;
+      line-height: 1.4;
+      font-weight: bold;
+    }
+    &__detail {
+      margin: 8px 0 0;
+      font-size: 14px;
+      color: #888;
+      line-height: 1.5;
+    }
+    .item-main {
+      margin: 16px 0 0 0;
+      height: 420px;
+      width: 700px;
+      .item-photo {
+        float: left;
+        min-width: 300px;
+        max-width: 300px;
+        min-height: 375px;
+        margin: 0 auto;
+        position: relative;
+        .photo-big {
+          position: relative;
+          overflow: hidden;
+        }
+        .photo-small {
+          line-height: 0;
+        }
+      }
+      .item-detail {
+        float: right;
+        height: 400px;
+        max-width: 300px;
+        margin: 0 auto;
+        width: 100%;
+        box-sizing: border-box;
+        .category {
+          background-color: #fafafa;
+        }
+        .name {
+          color:#0099e8;
+        }
+        .user-rating {
+          color: #0099e8;
+          .item-user-ratings {
+            display: inline-block;
+            .fas.fa-laugh {
+              color: #ef5185;
+            }
+            .fas.fa-meh {
+              color: #fba933;
+            }
+            // .fas.fa-frown {
+            // }
+            .text {
+              color: rgb(51, 51, 51);
+            }
+          }
+        }
+      }
+    }
+  }
+  .price-box {
+    margin: 24px 0 0;
+    text-align: center;
+    &__price {
+      font-size: 50px;
+      margin: 0 16px 0 0;
+      font-weight: 600;
+      text-align: center;
+    }
+    &__tax {
+      font-size: 10px;   
+    }
+    // &__fee {    
+    // }
+  }
+  .item-buy-btn {
+    font-size: 24px;
+    display: block;
+    font-weight: 600;
+    margin-top: 16px;
+    background-color: #ea352d;
+    color: white;
+    text-align: center;
+    line-height: 60px;
+  }
+  .item-description {
+    padding: 32px 0 0;
+    font-size: 18px;
+    line-height: 1.5;
+    &__inner {
+      white-space: pre-wrap;
+      
+    }
+  }
+  .button-content {
+    margin: 16px 0 0;
+    font-weight: 400;
+    &__left {
+      float: left;
+      display: flex;
+    }
+    .button-like {
+      border-radius: 40px;
+      background: rgb(233, 229, 229); 
+      padding: 8px 16px;
+    }
+    .button-report {
+      margin: 0 0 0 16px;
+      color: #333;
+      background: rgb(233, 229, 229);
+      padding: 8px 16px;
+      border-radius: 40px;
+    }
+    &__right {
+      float: right;
+      color: #0099e8;
+      background: #f5f5f5;
+      padding: 8px 16px;
+    }
+  }
+}
