--- a/app/views/layouts/_main_page_header.html.haml
+++ b/app/views/layouts/_main_page_header.html.haml
@@ -1,3 +1,4 @@
+-# 〜〜〜〜〜ここからヘッダー（上段）エリア〜〜〜〜〜
 .header
   .header_main
     .header_upper
@@ -28,60 +29,6 @@
           %a.header_under_right_1_1{:href => "/jp/signup/"} 新規会員登録
         .header_under_right_2
           %a.header_under_right_2_2{:href => "/jp/login/?login_callback=%2Fjp%2F"} ログイン
+-# 〜〜〜〜〜ここから中段エリア〜〜〜〜〜
 .middle
-  .middle_slide_area
-
--# 〜〜〜〜〜ヘッダーエリア〜〜〜〜〜
--# %header.sc-gJWqzi.gSWOes.sc-hXRMBi.cTIXLQ #
--#   .sc-epnACN.dapQZa #ヘッダー
--#     .sc-iQNlJl.lkFOLR 
--#       .sc-hqyNC.xUiJL
--#         %a.sc-dNLxif.KzmkZ{:href => "/jp/"}
--#           %img.sc-jbKcbu.kuQyNF{:alt => "Mercari", :src => "https://web-jp-assets.mercdn.net/_next/static/images/logo-acdd90ac4f472d5a6f7a330d33ab1225.svg"}/
--#       %form.sc-kjoXOD.jhhfpc{:action => "/jp/search/"}
--#         %input.sc-cHGsZl.uBYjF{:name => "keyword", :placeholder => "何かお探しですか？", :type => "search", :value => ""}/
--#         %button.sc-TOsTZ.eEWgtr
--#           %svg.sc-jDwBTQ.sc-kgAjT.gKFuLS{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 16 16", :width => "16"}
--#             %path{:d => "M11.435 10.063h-.723l-.256-.247a5.92 5.92 0 0 0 1.437-3.87 5.946 5.946 0 1 0-5.947 5.947 5.92 5.92 0 0 0 3.87-1.437l.247.256v.723L14.637 16 16 14.637l-4.565-4.574zm-5.489 0A4.111 4.111 0 0 1 1.83 5.946 4.111 4.111 0 0 1 5.946 1.83a4.111 4.111 0 0 1 4.117 4.116 4.111 4.111 0 0 1-4.117 4.117z", :fill => "currentColor", "fill-rule" => "nonzero"}
--#     .sc-bsbRJL.corkCf  #ヘッダー下
--#       .sc-fMiknA.iUysIE
--#         .sc-gisBJw.duCyXi
--#           %a.sc-eqIVtm.jreoh{:href => "/jp/category/"}
--#             %svg.sc-cvbbAY.sc-fAjcbJ.dKBFhm{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 20 16", :width => "20"}>
--#               %path{:d => "M18.799 15.25h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zM2 16a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4z", :fill => "currentColor", "fill-rule" => "nonzero"}
--#             カテゴリーから探す
--#           .sc-dVhcbM.hyHaBj
--#         .sc-gisBJw.duCyXi
--#           %a.sc-eqIVtm.jreoh{:href => "/jp/brand/"}
--#             %svg.sc-csuQGl.sc-caSCKo.kspmux{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 23 16", :width => "23"}>
--#               %path{:d => "M6.315 0L4.473 1.806 2.833.019.73 1.977l1.69 1.84L1.198 5.02c-1.594 1.594-1.594 4.188-.01 5.772L6.3 16h13.272a3.08 3.08 0 0 0 3.077-3.077V3.076A3.08 3.08 0 0 0 19.57 0H6.315zm13.46 12.925a.211.211 0 0 1-.205.205H7.504L3.227 8.771a1.226 1.226 0 0 1-.01-1.71L4.38 5.92l1.28 1.371a2.68 2.68 0 1 0 2.13-1.93L6.433 3.907 7.49 2.87h12.082a.211.211 0 0 1 .206.205v9.848h-.002z", :fill => "currentColor", "fill-rule" => "nonzero"}
--#             ブランドから探す
--#           .sc-dVhcbM.hyHaBj
--#       .sc-cJSrbW.kSIIvy
--#         .sc-ksYbfQ.VWTjH
--#           %a.sc-hmzhuo.RnltX{:href => "/jp/signup/"} 新規会員登録
--#         .sc-frDJqD.dcGsvC
--#           %a.sc-kvZOFW.bQksMT{:href => "/jp/login/?login_callback=%2Fjp%2F"} ログイン
-
-
--# 〜〜〜スライドエリア〜〜〜〜〜
--# .sc-bHwgHz.dXWKjv
--#   .sc-krDsej.ipWlFP
--#     .sc-kLIISr.fZUgNw
--#       %a{:href => "https://jp-news.mercari.com/2019/09/02/mega-listing-fes"}
--#         .sc-fzsDOv.crqdoW
--#       .slider.sc-dliRfk.kzTjJt{:style => "box-sizing:border-box;display:block;height:auto;-moz-box-sizing:border-box;position:relative;visibility:hidden;width:100%"}
--#         .slider-frame{:style => "box-sizing:border-box;display:block;height:100%;margin:0px;-moz-box-sizing:border-box;-ms-transform:translate(0, 0);overflow:hidden;padding:0;position:relative;touch-action:pinch-zoom pan-y;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0)"}
--#           %ul.slider-list{:style => "transform:translate3d(0px, 0px, 0);-webkit-transform:translate3d(0px, 0px, 0);-ms-transform:translate(0px, 0px);position:relative;display:block;margin:0px 0px;padding:0;height:0;width:0;cursor:pointer;box-sizing:border-box;-moz-box-sizing:border-box;touch-action:pinch-zoom pan-y"}
--#             %li.slider-slide.slide-visible{:style => "box-sizing:border-box;display:inline-block;height:auto;left:0;list-style-type:none;margin-bottom:auto;margin-left:0;margin-right:0;margin-top:auto;-moz-box-sizing:border-box;position:absolute;top:0;transform:scale(1);transition:transform .4s linear;vertical-align:top;width:0"}
--#               %a{:href => "https://jp-news.mercari.com/2019/09/02/mega-listing-fes"}
--#                 .sc-fzsDOv.crqdoW{"aria-hidden" => "false", :tabindex => "0"}
--#             %li.slider-slide{:style => "box-sizing:border-box;display:inline-block;height:auto;left:0;list-style-type:none;margin-bottom:auto;margin-left:0;margin-right:0;margin-top:auto;-moz-box-sizing:border-box;position:absolute;top:0;transform:scale(1);transition:transform .4s linear;vertical-align:top;width:0"}
--#               %a{:href => "https://www.mercari.com/jp/featured/camp/"}
--#                 .sc-fzsDOv.fMhhHq{"aria-hidden" => "true"}
--#             %li.slider-slide{:style => "box-sizing:border-box;display:inline-block;height:auto;left:0;list-style-type:none;margin-bottom:auto;margin-left:0;margin-right:0;margin-top:auto;-moz-box-sizing:border-box;position:absolute;top:0;transform:scale(1);transition:transform .4s linear;vertical-align:top;width:0"}
--#               .sc-fzsDOv.bOTCLy
--#                 .sc-gPWkxV.dCphDj
--#                   %img.sc-kUaPvJ.eNWrin{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/top-banner-main-device-1f627e51e488f6ca35feaa6a08b79736.png"}/
--#                   .sc-jVODtj.jweXgj
--#                     .sc-hmXxxW.gfsMaN
+  .middle_slide_area　 
