--- a/app/assets/stylesheets/signup1.scss
+++ b/app/assets/stylesheets/signup1.scss
@@ -10,7 +10,7 @@
     font-size:18px;
     font-weight: bold;
     text-align: center;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 1px solid #fff;
   }
   &__btn{
     display: block;
