--- a/app/views/tests/_signup1.html.haml
+++ b/app/views/tests/_signup1.html.haml
@@ -9,6 +9,6 @@
       %i.fab.fa-facebook-square
       Facebookで登録する
     =link_to "aaa", class:"contents__btn contents__btn--3" do
-      %i.fab.fa-google
+      %img{ src:"https://img.icons8.com/color/20/000000/google-logo.png", class:"googlelogo" }
       Googleで登録する
       
