main page teke4
ヘッダーアンパサンドに記述変更
ミドルページhamlベース作成

--- a/app/views/layouts/_main_page_header.html.haml
+++ b/app/views/layouts/_main_page_header.html.haml
@@ -1,34 +1,49 @@
 -# 〜〜〜〜〜ここからヘッダー（上段）エリア〜〜〜〜〜
 .header
-  .header_main
-    .header_upper
-      .header_upper_left
-        %a.header_upper_left_a{:href => "/jp/"}
-          %img.header_upper_left_img{:alt => "Mercari", :src => "https://web-jp-assets.mercdn.net/_next/static/images/logo-acdd90ac4f472d5a6f7a330d33ab1225.svg"}/
-      %form.header_upper_right{:action => "/jp/search/"}
-        %input.header_upper_right_in{:name => "keyword", :placeholder => "何かお探しですか？", :type => "search", :value => ""}/
-        %button.header_upper_right_button
-          %svg.header_upper_right_svg{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 16 16", :width => "16"}
+  .header__main
+    .header__upper
+      .header__upper__left
+        %a.header__upper__left__a{:href => "#"}
+          %img.header__upper__left__img{:alt => "Mercari", :src => "https://web-jp-assets.mercdn.net/_next/static/images/logo-acdd90ac4f472d5a6f7a330d33ab1225.svg"}/
+      %form.header__upper__right{:action => "/jp/search/"}
+        %input.header__upper__right__in{:name => "keyword", :placeholder => "何かお探しですか？", :type => "search", :value => ""}/
+        %button.header__upper__right__button
+          %svg.header__upper__right__svg{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 16 16", :width => "16"}
             %path{:d => "M11.435 10.063h-.723l-.256-.247a5.92 5.92 0 0 0 1.437-3.87 5.946 5.946 0 1 0-5.947 5.947 5.92 5.92 0 0 0 3.87-1.437l.247.256v.723L14.637 16 16 14.637l-4.565-4.574zm-5.489 0A4.111 4.111 0 0 1 1.83 5.946 4.111 4.111 0 0 1 5.946 1.83a4.111 4.111 0 0 1 4.117 4.116 4.111 4.111 0 0 1-4.117 4.117z", :fill => "currentColor", "fill-rule" => "nonzero"}
-    .header_under
-      .header_under_left
-        .header_under_left_1
-          %a.header_under_left_1_1{:href => "/jp/category/"}
-            %svg.header_under_left_1_1_1{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 20 16", :width => "20"}>
+    .header__under
+      .header__under__left
+        .header__under__left__1
+          %a.header__under__left__1__1{:href => "#"}
+            %svg.header__under__left__1__1__1{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 20 16", :width => "20"}>
               %path{:d => "M18.799 15.25h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zm0-6h-11.5a1.25 1.25 0 1 1 0-2.5h11.5a1.25 1.25 0 0 1 0 2.5zM2 16a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0-6a2 2 0 1 0 0-4 2 2 0 0 0 0 4z", :fill => "currentColor", "fill-rule" => "nonzero"}
             カテゴリーから探す
-          .header_under_left_1_roll 
-        .header_under_left_1
-          %a.header_under_left_1_1{:href => "/jp/brand/"}
-            %svg.header_under_left_1_1_2{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 23 16", :width => "23"}>
+          .header__under__left__1__roll 
+        .header__under__left__1
+          %a.header__under__left__1__1{:href => "#"}
+            %svg.header__under__left__1__1__2{"aria-hidden" => "true", :height => "16", :viewbox => "0 0 23 16", :width => "23"}>
               %path{:d => "M6.315 0L4.473 1.806 2.833.019.73 1.977l1.69 1.84L1.198 5.02c-1.594 1.594-1.594 4.188-.01 5.772L6.3 16h13.272a3.08 3.08 0 0 0 3.077-3.077V3.076A3.08 3.08 0 0 0 19.57 0H6.315zm13.46 12.925a.211.211 0 0 1-.205.205H7.504L3.227 8.771a1.226 1.226 0 0 1-.01-1.71L4.38 5.92l1.28 1.371a2.68 2.68 0 1 0 2.13-1.93L6.433 3.907 7.49 2.87h12.082a.211.211 0 0 1 .206.205v9.848h-.002z", :fill => "currentColor", "fill-rule" => "nonzero"}
             ブランドから探す
-          .header_under_left_1_roll 
-      .header_under_right
-        .header_under_right_1
-          %a.header_under_right_1_1{:href => "/jp/signup/"} 新規会員登録
-        .header_under_right_2
-          %a.header_under_right_2_2{:href => "/jp/login/?login_callback=%2Fjp%2F"} ログイン
+          .header__under__left__1__roll 
+      .header__under__right
+        .header__under__right__1
+          %a.header__under__right__1__1{:href => "#"} 新規会員登録
+        .header__under__right__2
+          %a.header__under__right__2__2{:href => "#"} ログイン
 -# 〜〜〜〜〜ここから中段エリア〜〜〜〜〜
 .middle
-  .middle_slide_area　 
+  .middle__main
+    .middle__main__slide__area
+    .middle__main__category
+      .middle__main__category__area
+        %h2.middle__main__category__text
+          .middle__main__category__block
+            %ul.middle__main__category__block__area
+              %li.middle__main__category__block__area__a
+                %a.middle__main__category__block__area__a__1{:href => "#"}レディース
+                %a.middle__main__category__block__area__a__2{:href => "#"}メンズ
+                %a.middle__main__category__block__area__a__3{:href => "#"}家電・スマホ・カメラ
+                %a.middle__main__category__block__area__a__4{:href => "#"}おもちゃ・ホビー・グッズ
+
+
+.exhibit_btn
+.a_area
