--- a/app/assets/stylesheets/main_page_header.scss
+++ b/app/assets/stylesheets/main_page_header.scss
@@ -3,15 +3,16 @@
   position: relative;
   display: block;
   height: 100px;
-}
-.header_main{
+
+&__main{
   width: 1020px;
   margin: 0px auto;
   padding: 8px 0px 0px;
   box-sizing: border-box;
   display: block;
 }
-.header_upper{
+
+&__upper{
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
@@ -22,173 +23,205 @@
   vertical-align: baseline;    
   border-width: 0px;
   font: inherit;
-}
-.header_upper_left{
--webkit-box-align: center;
-align-items: center;
-display: flex;
-height: 40px;
-margin-right: 45px;
-}
-.header_upper_left_a{
-  color: inherit;
-  text-decoration: none;
-}
-.header_upper_left_img{
-height: 36px;
-width: 134px;
+
+  &__left{
+    -webkit-box-align: center;
+    align-items: center;
+    display: flex;
+    height: 40px;
+    margin-right: 45px;
+    
+
+    &__a{
+      color: inherit;
+      text-decoration: none;
+    }
+
+
+    &__img{
+      height: 36px;
+      width: 134px;
+    }
+  }
+
+
+  &__right{
+    position: relative;
+    width: 100%;
+  
+    &__in{
+      background-color: rgb(245, 245, 245);
+      font-size: 16px;
+      height: 40px;
+      line-height: 1.4em;
+      position: relative;
+      width: 100%;
+      -webkit-appearance: none;
+      border-width: 1px;
+      border-style: solid;
+      border-color: rgb(204, 204, 204);
+      border-image: initial;
+      border-radius: 4px;
+      outline: none;
+      padding: 0px 50px 0px 10px;
+      transition: all 0.3s ease-out 0s;
+      font-family: inherit;
+    }
+    &__button{
+      background-color: transparent;
+      cursor: pointer;
+      height: 40px;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      width: 40px;
+      -webkit-appearance: none;
+      border-width: initial;
+      border-style: none;
+      border-color: initial;
+      border-image: initial;
+      border-radius: 0px 4px 4px 0px;
+      padding: 0px;
+      font-family: inherit;
+        font-size: 100%;
+    }
+    &__svg{
+      max-width: 100%;
+      max-height: 100%;
+      color: rgb(34, 34, 34);
+      height: 14px;
+      margin-top: 2px;
+      width: 14px;
+    }
+  }
 }
 
-.header_upper_right{
-  position: relative;
-  width: 100%;
+  &__under{
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    margin-top: 8px;
 
-}
+    &__left{
+      display: flex;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      margin-top: 8px;
 
-.header_upper_right_in{
-  background-color: rgb(245, 245, 245);
-  font-size: 16px;
-  height: 40px;
-  line-height: 1.4em;
-  position: relative;
-  width: 100%;
-  -webkit-appearance: none;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(204, 204, 204);
-  border-image: initial;
-  border-radius: 4px;
-  outline: none;
-  padding: 0px 50px 0px 10px;
-  transition: all 0.3s ease-out 0s;
-  font-family: inherit;
+      &__1{
+        padding-left: 0px;
+        cursor: pointer;
+        height: 44px;
+        position: relative;
+        z-index: 3;
+        padding: 0px 10px;
+      
+        &__1{
+          display: block;
+          font-size: 14px;
+          font-weight: 600;
+          line-height: 36px;
+          white-space: nowrap;
 
-}
+          &__1{
+            max-width: 100%;
+            max-height: 100%;
+            color: rgb(234, 53, 45);
+            height: 12px;
+            margin-right: 4px;
+          }
 
-.header_upper_right_button{
-  background-color: transparent;
-  cursor: pointer;
-  height: 40px;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 40px;
-  -webkit-appearance: none;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  border-radius: 0px 4px 4px 0px;
-  padding: 0px;
-  font-family: inherit;
-    font-size: 100%;
+          &__2{
+            max-width: 100%;
+            max-height: 100%;
+            color: rgb(234, 53, 45);
+            height: 12px;
+            margin-right: 4px;
+          }
+        }
+        &__roll{
+        }
+      }
+    }
+    
 
-}
 
-.header_upper_right_svg{
-  max-width: 100%;
-  max-height: 100%;
-  color: rgb(34, 34, 34);
-  height: 14px;
-  margin-top: 2px;
-  width: 14px;
-}
-.header_under{
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  margin-top: 8px;
-}
-.header_under_left{
-  display: flex;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  margin-top: 8px;
+    &__right{
+      display: flex;
+    
+      &__1{
+        text-align: center;
 
-}
-.header_under_left_1{
-  padding-left: 0px;
-  cursor: pointer;
-  height: 44px;
-  position: relative;
-  z-index: 3;
-  padding: 0px 10px;
-}
-.header_under_left_1_1{
-  display: block;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 36px;
-  white-space: nowrap;
-}
-.header_under_left_1_1_1{
-  max-width: 100%;
-  max-height: 100%;
-  color: rgb(234, 53, 45);
-  height: 12px;
-  margin-right: 4px;
-}
-.header_under_left_1_roll{
-
-}
-.header_under_left_1_1_2{
-  max-width: 100%;
-  max-height: 100%;
-  color: rgb(234, 53, 45);
-  height: 12px;
-  margin-right: 4px;
-
+        &__1{
+          background-color: rgb(234, 53, 45);
+          color: rgb(255, 255, 255);
+          display: block;
+          font-size: 14px;
+          border-width: 1px;
+          border-style: solid;
+          border-color: rgb(234, 53, 45);
+          border-image: initial;
+          border-radius: 4px;
+          padding: 8px 10px;
+        }
+      }
+      &__2{
+        text-align: center;
+        margin-left: 11px;
+        &__2{
+          background-color: rgb(255, 255, 255);
+          color: rgb(0, 149, 238);
+          display: block;
+          font-size: 14px;
+          border-width: 1px;
+          border-style: solid;
+          border-color: rgb(0, 149, 238);
+          border-image: initial;
+          border-radius: 4px;
+          padding: 8px 10px;
+          transition: all 0.3s ease-out 0s;
+        }
+      }
+    }
+  }
 }
 
-.header_under_right{
-  display: flex;
-
-}
-.header_under_right_1{
-  text-align: center;
-
-}
-
-.header_under_right_1_1{
-  background-color: rgb(234, 53, 45);
-  color: rgb(255, 255, 255);
-  display: block;
-  font-size: 14px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(234, 53, 45);
-  border-image: initial;
-  border-radius: 4px;
-  padding: 8px 10px;
-}
-.header_under_right_2{
-  text-align: center;
-  margin-left: 11px;
-}
-a.header_under_right_2_2{
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 149, 238);
-  display: block;
-  font-size: 14px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(0, 149, 238);
-  border-image: initial;
-  border-radius: 4px;
-  padding: 8px 10px;
-  transition: all 0.3s ease-out 0s;
-}
 .middle{
   background-color: rgb(200, 255, 255);
   width: 100%;
   margin: 0px auto;
   height: 400px;
-}
 
-.middle_slide_area{
-  background-color: rgb(206, 255, 200);
-  width: auto;
-  height: 400px;
-  padding-top: 28px;
-  max-width: 680px;
-}
+  &__main{
+    &__slide__area{
+      background-color: rgb(206, 255, 200);
+      width: auto;
+      height: 400px;
+      padding-top: 28px;
+      max-width: 680px;
+    }
+    &__category{
+      &__area{
+      }
+      &__text{
+
+      }
+      &__block{
+        &__area{
+          &__a{
+            &__1{
+            }
+            &__2{
+            }
+            &__3{
+            }
+            &__4{
+            }
+          }
+          }
+        }
+      }
+    }
+  }
+
+
