--- a/app/views/tests/_signup2.html.haml
+++ b/app/views/tests/_signup2.html.haml
@@ -2,22 +2,22 @@
   .contents__head
     会員情報入力
   .contents__form
-    %div.contents__form__title1
+    .contents__form__title1
       %label ニックネーム
       %span.contents__form__require 必須
       %input{ class:"contents__form__input", maxlength:"10", name:"nickname", placeholder:"例）メルカリ太郎", type:"text", value:""}
 
-    %div.contents__form__title
+    .contents__form__title
       %label メールアドレス
       %span.contents__form__require 必須
       %input{ class:"contents__form__input", maxlength:"10", name:"email", placeholder:"PC・携帯どちらでも可", type:"text", value:""}
 
-    %div.contents__form__title
+    .contents__form__title
       %label パスワード
       %span.contents__form__require 必須
       %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"7文字以上", type:"text", value:""}
 
-    %div.contents__form__title
+    .contents__form__title
       %label パスワード (確認)
       %span.contents__form__require 必須
       %input{ class:"contents__form__input", maxlength:"10", name:"password", placeholder:"7文字以上", type:"text", value:""}
@@ -26,21 +26,21 @@
       %h3.contents__message 本人確認
       %p.contents__message__main 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
 
-    %div.contents__form__title
+    .contents__form__title
       %label お名前(全角)
       %span.contents__form__require 必須
       %div{ style:"display:inline-flex"}
         %input{ class:"contents__form__input__2", maxlength:"10", name:"first-name", placeholder:"例) 山田", type:"text", value:""}
         %input{ class:"contents__form__input__2", maxlength:"10", name:"name", placeholder:"例) 彩", type:"text", value:""}
 
-    %div.contents__form__title
+    .contents__form__title
       %label お名前カナ(全角)
       %span.contents__form__require 必須
       %div{ style:"display:inline-flex"}
         %input{ class:"contents__form__input__2", maxlength:"10", name:"first-name", placeholder:"例) ヤマダ", type:"text", value:""}
         %input{ class:"contents__form__input__2", maxlength:"10", name:"name", placeholder:"例) アヤ", type:"text", value:""}
 
-    %div.contents__form__title
+    .contents__form__title
       %label 生年月日
       %span.contents__form__require 必須
       %div{ style:"display:inline-flex"}
@@ -163,4 +163,3 @@
         =link_to "sss", class:"contents__info" do
           本人情報の登録について
           %i.fas.fa-chevron-right
-          
