--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -13,3 +13,5 @@
   = link_to "ユーザー登録", new_user_registration_path, class: 'btn btn-default'
   = link_to "登録内容変更", edit_user_registration_path, class: 'btn btn-default'
   = link_to "ログアウト", destroy_user_session_path, class: 'btn btn-default'
+
+  = render "signup5"
