create footer2 (advertisement)

--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -6,6 +6,8 @@
 
     = render "layouts/profile-sidebar"
 
+    = render "shared/aside"
+
   %body
     %footer= render "shared/footer"
     Hello,World
