--- a/app/assets/stylesheets/signup1.scss
+++ b/app/assets/stylesheets/signup1.scss
@@ -1,8 +1,8 @@
 .contents {
   height: 310px;
-  width: 600px;
+  width: 560px;
   margin: 0 auto;
-  background-color: whitesmoke;
+  background-color: #fff;
   &__head{
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     padding: 25px;
@@ -10,7 +10,7 @@
     font-size:18px;
     font-weight: bold;
     text-align: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid whitesmoke;
   }
   &__btn{
     display: block;
