--- a/app/assets/stylesheets/signup2.scss
+++ b/app/assets/stylesheets/signup2.scss
@@ -3,7 +3,7 @@
   height: 100%;
   width: 560px;
   margin: 0 auto;
-  background-color: whitesmoke;
+  background-color: #fff;
   &__head{
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
     padding: 25px;
@@ -11,7 +11,7 @@
     font-size:18px;
     font-weight: bold;
     text-align: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid whitesmoke;
   }
   &__form{
     display: block;
