--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "footer";
 @import 'signup5';
 @import 'signup4';
-@import 'signup3'
+@import 'signup3';
 @import 'signup2';
 @import 'signup1';
 @import "./main_page_header";
