--- a/app/views/tests/show.html.haml
+++ b/app/views/tests/show.html.haml
@@ -14,6 +14,6 @@
       %section.mypage-content__tab-list
       %section.mypage-content__tab-deal
 
-    %aside= render "layouts/profile-sidebar"
+    %aside= render "shared/profile-sidebar"
 
    
