--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -3,6 +3,7 @@
   %head
 
     = render 'shared/main_page_header'
+    = render 'shared/top_page_middle'
 
     %body
       %aside= render "shared/aside"
