--- a/app/views/shared/_credit-card-registration.html.haml
+++ b/app/views/shared/_credit-card-registration.html.haml
@@ -1,1 +1,13 @@
-
+.credit-box
+  %section.credit-chapter-container
+    %h2.credit-chapter-container__head
+      支払い方法
+    .credit-chapter-container__inner
+      %section
+        .credit-chapter-container__inner__content
+          クレジットカード一覧
+      %section.credit-chapter-container__inner__setting
+        %a.credit-chapter-container__inner__setting__btn.btn-default.btn-red.submit_button{href: "#"}
+          %i.fas.fa-credit-card
+          クレジットカードを追加する
+        
