--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -1,10 +1,8 @@
 !!!
 %html
   %head
+    %header= render "shared/main_page_header"
 
-    = render 'shared/main_page_header'
-    = render 'shared/top_page_middle'
-
-    %body
-      %aside= render "shared/aside"
-      %footer= render "shared/footer"
+    .contents-box
+      %profile-main= render "shared/credit-card-registration"
+      %profile-side= render "shared/profile-sidebar"
