--- a/app/views/shared/_credit-card-registration.html.haml
+++ b/app/views/shared/_credit-card-registration.html.haml
@@ -10,4 +10,9 @@
         %a.credit-chapter-container__inner__setting__btn.btn-default.btn-red.submit_button{href: "#"}
           %i.fas.fa-credit-card
           クレジットカードを追加する
+    .credit-chapter-container__regist
+      %a.credit-chapter-container__regist__way{href: "#"}
+        %span 支払い方法について
+        %i.fas.fa-chevron-right
+                        
         
