--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -6,3 +6,7 @@
     .contents-box
       %profile-main= render "shared/credit-card-registration"
       %profile-side= render "shared/profile-sidebar"
+
+  %footer
+    = render "shared/aside"
+    = render "shared/footer"
