change file name

--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -4,7 +4,7 @@
     %header= render "shared/main_page_header"
 
     .contents-box
-      %profile-main= render "shared/credit-card-registration"
+      %profile-main= render "shared/credit1"
       %profile-side= render "shared/profile-sidebar"
 
   %footer
