--- a/app/views/shared/_credit1.html.haml
+++ b/app/views/shared/_credit1.html.haml
@@ -1,3 +1,4 @@
+-# https://www.mercari.com/jp/mypage/card/ クレジット登録画面1
 .credit-box
   %section.credit-chapter-container
     %h2.credit-chapter-container__head
