--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -1,10 +1,10 @@
 !!!
 %html
   %head
-
     = render 'shared/main_page_header'
-    = render 'shared/top_page_middle'
 
-    %body
-      %aside= render "shared/aside"
-      %footer= render "shared/footer"
+    .logout-contents
+      = render 'shared/logout'
+      = render 'shared/profile-sidebar'
+
+
