Adjustment　logout page

--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -7,4 +7,8 @@
       = render 'shared/logout'
       = render 'shared/profile-sidebar'
 
+    %footer
+      = render 'shared/aside'
+      = render 'shared/footer'
+
 
