--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -3,8 +3,7 @@
   %head
 
     = render 'shared/main_page_header'
-    = render 'shared/top_page_middle'
-
+    = render 'shared/profile-sidebar'
     %body
       %aside= render "shared/aside"
       %footer= render "shared/footer"
