--- a/app/assets/stylesheets/purchase-confirmation.scss
+++ b/app/assets/stylesheets/purchase-confirmation.scss
@@ -65,6 +65,27 @@ main {
                         font-weight: 600;
                         line-height: 1.5;
                     }
+
+                    &__buy-form{
+                        width: 100%;
+
+                        &__list{
+                            width: 100%;
+                            &__price{
+                                margin: 12px 0 0;
+                                line-height: 1.5;
+                                font-size: 18px;
+                                font-weight: 600;
+                                text-align: center;
+                                &__text{
+                                    margin: 0 0 0 8px;
+                                    font-size: 14px;
+                                    font-weight: 400;
+                                    text-align: center;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
