--- a/app/assets/stylesheets/purchase-confirmation.scss
+++ b/app/assets/stylesheets/purchase-confirmation.scss
@@ -27,7 +27,7 @@ main {
     .confirmation-main{
         &__container{
             width: 700px;
-            height: 600px;
+            height: 1200px;
             margin: 0 auto;
             background: #fff;
             
@@ -84,6 +84,56 @@ main {
                                     text-align: center;
                                 }
                             }
+                            &__point{
+                                cursor: default;
+                                padding: 16px;
+                                background-color: #ccc;
+                                border: 1px solid #ccc;
+                                font-size: 14px;
+                                text-align: center;
+                                margin-top: 20px;
+                            }
+
+                            &__table{
+                                display: table;
+                                border-collapse: collapse;
+                                width: 100%;
+                                &__list{
+                                    border: 0;
+                                    font-size: 18px;
+                                    font-weight: 600;
+                                    margin: 20px auto 20px;
+
+                                    &__left-text{
+                                        text-align: left;
+                                        display: table-cell;
+                                    }
+
+                                    &__right-text{
+                                        font-size: 20px;
+                                        padding-left: 145px;
+                                        text-align: right;
+                                        display: table-cell;
+                                    }
+
+                                }
+                            }
+
+                            .btn{
+                                margin: 8px 0 0;
+                                background: #ea352d;
+                                border: 1px solid #ea352d;
+                                color: #fff;
+                                display: block;
+                                width: 100%;
+                                line-height: 48px;
+                                font-size: 14px;
+                                border: 1px solid transparent;
+                                -webkit-transition: all ease-out .3s;
+                                transition: all ease-out .3s;
+                                cursor: pointer;
+                                text-align: center;
+                            }
                         }
                     }
                 }
@@ -91,3 +141,5 @@ main {
         }
     }
 }
+
+
