--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -1,20 +1,24 @@
+-# ページのヘッダー部分
 .confirmation-header
   %h1
-    -# %a.confirmation-heade__link{href: '#'}
     =link_to "#", class: "confirmation-heade__link" do
       %img.confirmation-header__link__mercarilogo{alt: "confirmation-mercarilogo", src: "/confirmation-mercarilogo.svg"}
 
+-# メイン画面
 %main.confirmation-main
   %section.confirmation-main__container
+    -# メイン画面ヘッダー
     %h2.confirmation-main__container__header
       購入内容の確認
     
+    -# 商品情報、値段など
     %section.confirmation-main__container__buy-content
       .confirmation-main__container__buy-content__inner
         %h3.confirmation-main__container__buy-content__inner__item
           %img.confirmation-main__container__buy-content__inner__item__image{ alt: "buy-item-image", src: "https://static.mercdn.net/thumb/photos/m57058223520_1.jpg?1567902416" }
         %p.confirmation-main__container__buy-content__inner__item-name
           付録：ピーナッツ スヌーピーのおうちと仲間たちチャーリーブラウンの縦型ポーチ
+        -# ポイント、支払い金額、購入ボタン
         = form_with(url: '#', class: 'confirmation-main__container__buy-content__inner__buy-form') do |f|
           .confirmation-main__container__buy-content__inner__buy-form__list
             %p.confirmation-main__container__buy-content__inner__buy-form__list__price
@@ -30,3 +34,18 @@
                 .confirmation-main__container__buy-content__inner__buy-form__list__table__list__right-text
                   ¥2,600
             =f.submit nil, value: '購入する', class: 'confirmation-main__container__buy-content__inner__buy-form__list btn btn-primary'
+    
+    -# ユーザー情報、配送先
+    %section.confirmation-main__container__buy-info
+      .confirmation-main__container__buy-info__container
+        %h3 配送先
+        %address.confirmation-main__container__buy-info__container__address
+          .confirmation-main__container__buy-info__container__address__postal-code 
+            〒000-0000
+          .confirmation-main__container__buy-info__container__address__address-name 
+            東京都渋谷区ほにゃらららららら
+          .confirmation-main__container__buy-info__container__address__user-name  
+            ユーザの本名
+          =link_to '#', class: 'confirmation-main__container__buy-info__container__user-info-fix' do
+            変更する
+            %i.fas.fa-chevron-right
