--- a/app/assets/stylesheets/purchase-confirmation.scss
+++ b/app/assets/stylesheets/purchase-confirmation.scss
@@ -1,11 +1,8 @@
-html {
-    width: 100%;
-    height: 100%;
-}
-
 body{
     width: 100%;
     height: 100%;
+    background: #eee;
+
 }
 
 // 画面のヘッダー部分
@@ -30,11 +27,9 @@ main {
     .confirmation-main{
         &__container{
             width: 700px;
-            height: 1200px;
+            // height: 1200px;
             margin: 0 auto;
             background: #fff;
-            
-
             &__header{
                 padding: 16px;
                 font-size: 22px;
@@ -42,7 +37,6 @@ main {
                 text-align: center;
                 font-weight: bolder;
             }
-
             &__buy-content{
                 padding: 24px 12.5px 0;
                 border-top: 1px solid #f5f5f5;
@@ -59,7 +53,6 @@ main {
                             width: 64px;
                         }
                     }
-
                     &__item-name{
                         width: calc(100% - 80px);
                         margin: 0 0 0 16px;
@@ -68,10 +61,8 @@ main {
                         font-weight: 600;
                         line-height: 1.5;
                     }
-
                     &__buy-form{
                         width: 100%;
-
                         &__list{
                             width: 100%;
                             &__price{
@@ -106,22 +97,18 @@ main {
                                     font-size: 18px;
                                     font-weight: 600;
                                     margin: 20px auto 20px;
-
                                     &__left-text{
                                         text-align: left;
                                         display: table-cell;
                                     }
-
                                     &__right-text{
                                         font-size: 20px;
                                         padding-left: 145px;
                                         text-align: right;
                                         display: table-cell;
                                     }
-
                                 }
                             }
-
                             .btn{
                                 margin: 8px 0 0;
                                 background: #ea352d;
@@ -173,7 +160,38 @@ main {
                         }
                     }
                 }
+
+            &__credit-info{
+                padding: 24px 12.5% 40px;
+                transition: all ease-out .3s;
+                border-top: 1px solid #f5f5f5;
+                margin-top: 40px;
+
+                    &__inner{
+                        max-width: 320px;
+                        margin: 0 auto;
+                            h3{
+                                margin: 0;
+                                font-size: 14px;
+                                font-weight: 600;
+                            }
+                            &__card-number{
+                                margin: 8px 0 0;
+                                font-size: 14px;
+                                line-height: 1.4;
+                            }
+                            &__deadline{
+                                font-size: 14px;
+                                line-height: 1.4;
+                            }
+                            &__logo{
+                                height: 15px;
+                                width: 49px;
+                            }
+                        }
+                    }
+                }
             }
         }
-    }
+
 
