--- a/app/assets/stylesheets/purchase-confirmation.scss
+++ b/app/assets/stylesheets/purchase-confirmation.scss
@@ -161,6 +161,7 @@ main {
                     }
                 }
 
+            // クレジットカード情報
             &__credit-info{
                 padding: 24px 12.5% 40px;
                 transition: all ease-out .3s;
@@ -193,5 +194,37 @@ main {
                 }
             }
         }
+
+footer{
+    height: 250px;
+    padding: 40px 0;
+    text-align: center;
+}
+
+.confirmation-footer-container{
+
+    &__list{
+        margin: 16px 0 0;
+        font-size: 12px;
+        border-style: solid;
+        border-width: 0;
+
+        &__info{
+            text-decoration: none;
+            color: #333;
+        }
+
+    }
+    &__image{
+        margin-top: 50px;
+        height: 65px;
+        width: 80px;
+    }
+
+    &__footer-text{
+        margin-top: 5px;
+        font-size: 10px;
+    }
+}
 
 
