--- a/app/assets/stylesheets/exhibit.scss
+++ b/app/assets/stylesheets/exhibit.scss
@@ -18,7 +18,7 @@ html{
 }
 
 
-.main-contents{
+.main-contents {
     width: 100%;
     height: 1200px;
     .contents-box{
@@ -32,6 +32,53 @@ html{
             font-weight: 600;
             text-align: center;
             border-bottom: 1px solid #eee;
+        }
+        &__form-list{
+            width: 700px;
+
+            &__upload-box{
+                padding: 40px 40px 20px 40px;
+                &__image-text{
+                    height: 30px;
+                    width:  70px;
+                    font-weight: bold;
+                    float: left;
+                }
+                .form-require{
+                    margin-right: 510px;
+                    background: #ea352d;
+                    padding: 2px 4px;
+                    border-radius: 2px;
+                    color: #fff;
+                    font-size: 12px;
+                    vertical-align: top;
+                    float: right;
+                }
+                .capture {
+                    padding-top: 30px;
+                    height: 20px;
+                    width: 500px;
+                    font-size: 12px;
+                    text-align: left;
+                }
+            }
+            &__drop-box{
+                background: #f5f5f5;
+                height: 162px;
+                width: 620px;
+                margin: 0 auto;
+                border: 1px dashed;
+                border-color: #ccc;
+                &__item{
+                    box-sizing: border-box;
+                    height: 100%;
+                    width: 100%;
+                    padding: 40px;
+                    &__upload-file{
+                        display: none;
+                    }
+                }
+            }
         }
     }
 }
