--- a/app/assets/stylesheets/exhibit.scss
+++ b/app/assets/stylesheets/exhibit.scss
@@ -4,6 +4,7 @@ html{
     background: #eee;
 }
 
+// ヘッダーロゴの部分
 .confirmation-header {
     height: 128px;
     text-align: center;
@@ -18,6 +19,7 @@ html{
 }
 
 
+// メインコンテンツ全体
 .main-contents {
     width: 100%;
     height: 1200px;
@@ -26,6 +28,7 @@ html{
         width: 700px;
         margin: 0 auto;
         background: #fff;
+        // コンテンツタイトル
         &__sell-container{
             padding: 32px 16px;
             font-size:  22px;
@@ -33,9 +36,9 @@ html{
             text-align: center;
             border-bottom: 1px solid #eee;
         }
+        // 画像アップロード部分
         &__form-list{
             width: 700px;
-
             &__upload-box{
                 padding: 40px 40px 20px 40px;
                 &__image-text{
@@ -77,7 +80,88 @@ html{
                     &__upload-file{
                         display: none;
                     }
+                    &__text {
+                        text-align: center;
+                        font-size: 14px;
+                        line-height: 1.5;
+                        transform: translate(0, -50%);
+                        pointer-events: none;
+                        white-space: pre-wrap;
+                        word-wrap: break-word;
+                        margin-top: 30px;
+                    }
                 }
+            }
+            &__space{
+                height: 50px;
+                border-bottom: 1px solid #eee;
+            }
+        }
+        // 商品名、商品説明部分
+        &__descript-section{
+            padding: 40px;
+            &__item-name{
+                &__text{
+                    height: 30px;
+                    width:  70px;
+                    font-weight: bold;
+                    float: left;
+                }
+                .form-require{
+                    margin-right: 510px;
+                    background: #ea352d;
+                    padding: 2px 4px;
+                    border-radius: 2px;
+                    color: #fff;
+                    font-size: 12px;
+                    vertical-align: top;
+                    float: right;
+                }
+            }
+            &__name-form{
+                width: 100%;
+                height: 48px;
+                border-radius: 4px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+                box-sizing: border-box;
+                padding: 10px;
+            }
+
+            &__item-description{
+                margin-top: 40px;
+                &__text{
+                    height: 30px;
+                    width:  90px;
+                    font-weight: bold;
+                    float: left;
+                }
+                .form-require{
+                    margin-right: 490px;
+                    background: #ea352d;
+                    padding: 2px 4px;
+                    border-radius: 2px;
+                    color: #fff;
+                    font-size: 12px;
+                    vertical-align: top;
+                    float: right;
+                }
+            }
+            &__descript-form{
+                width: 100%;
+                height: 142px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+                box-sizing: border-box;
+                padding: 10px;
+            }
+            &__space{
+                height: 5px;
+                border-bottom: 1px solid #eee;
             }
         }
     }
