--- a/app/assets/stylesheets/exhibit.scss
+++ b/app/assets/stylesheets/exhibit.scss
@@ -1,7 +1,13 @@
 html{
-    width: 100%;
-    height: 100%;
     background: #eee;
+    height: 100%;
+    width: 100%;
+}
+
+body{
+    height: 100%;
+    width: 100%;
+
 }
 
 // ヘッダーロゴの部分
@@ -21,10 +27,11 @@ html{
 
 // メインコンテンツ全体
 .main-contents {
+    position: relative;
     width: 100%;
-    height: 1200px;
+    height:100%;
     .contents-box{
-        height: 1000px;
+        height: 100%;
         width: 700px;
         margin: 0 auto;
         background: #fff;
@@ -38,6 +45,7 @@ html{
         }
         // 画像アップロード部分
         &__form-list{
+            height: 100%;
             width: 700px;
             &__upload-box{
                 padding: 40px 40px 20px 40px;
@@ -56,6 +64,7 @@ html{
                     font-size: 12px;
                     vertical-align: top;
                     float: right;
+                    font-weight: 600;
                 }
                 .capture {
                     padding-top: 30px;
@@ -99,6 +108,7 @@ html{
         }
         // 商品名、商品説明部分
         &__descript-section{
+            background: #fff;
             padding: 40px;
             &__item-name{
                 &__text{
@@ -116,6 +126,7 @@ html{
                     font-size: 12px;
                     vertical-align: top;
                     float: right;
+                    font-weight: 600;
                 }
             }
             &__name-form{
@@ -147,6 +158,7 @@ html{
                     font-size: 12px;
                     vertical-align: top;
                     float: right;
+                    font-weight: 600;
                 }
             }
             &__descript-form{
@@ -159,36 +171,67 @@ html{
                 box-sizing: border-box;
                 padding: 10px;
             }
-            &__space{
-                height: 5px;
-                border-bottom: 1px solid #eee;
-            }
         }
         // カテゴリ選択
-        &__categorie-section{
-            padding: 40px;
+        &__category-section{
+            border-top: 1px solid #eee;
+            background: #fff;
+            height: calc(100% - 120px);
+            padding-right: 40px;
+            padding-left: 40px;
             &__sub-head{
+                margin-top: 40px;
                 float: left;
                 color: #888;
                 font-size: 14px;
-                &__icon{
-                    .fa-question-circle{
-                        display: inline-block;
-                        width: 14px;
-                        height: 14px;
-                        border-radius: 50%;
-                        background: #0099e8;
-                        line-height: 14px;
-                        text-align: center;
+                }
+            &__category-box{
+                float: right;
+                width: 400px;
+                &__tag{
+                    margin-top: 40px;
+                    width: 120px;
+                    font-size: 15px;
+                    font-weight: 600;
+                    .form-require{
+                        background: #ea352d;
+                        padding: 2px 4px;
+                        border-radius: 2px;
+                        color: #fff;
+                        font-size: 12px;
+                        vertical-align: top;
+                        float: right;
+                    }
+                    .form-any{
+                        float: right;
+                        width: 25px;
+                        padding: 2px 4px;
+                        border-radius: 2px;
+                        color: #fff;
+                        font-size: 12px;
+                        vertical-align: top;
+                        background: #ccc;
                     }
                 }
+                #category{
+                    font-weight:  300;
+                    background: #eee;
+                    margin-top: 10px;
+                    z-index: 2;
+                    height: 48px;
+                    width: 400px;
+                    padding: 0 16px;
+                    border-radius: 4px;
+                    border: 1px solid #ccc;
+                    background: 0;
+                    font-size: 16px;
+                    line-height: 1.5;
+                    cursor: pointer;
+                }
             }
-
         }
     }
 }
-
-
 
 
 
@@ -200,28 +243,31 @@ html{
 
 // ここからフッター
 footer{
+    top: 2000px; 
+    left: 650px;
+    position: absolute;
     height: 250px;
     padding: 40px 0;
     text-align: center;
-}
-.confirmation-footer-container{
-    &__list{
-        margin: 16px 0 0;
-        font-size: 12px;
-        border-style: solid;
-        border-width: 0;
-        &__info{
-            text-decoration: none;
-            color: #333;
+    .confirmation-footer-container{
+        &__list{
+            margin: 16px 0 0;
+            font-size: 12px;
+            border-style: solid;
+            border-width: 0;
+            &__info{
+                text-decoration: none;
+                color: #333;
+            }
         }
-    }
-    &__image{
-        margin-top: 50px;
-        height: 65px;
-        width: 80px;
-    }
-    &__footer-text{
-        margin-top: 5px;
-        font-size: 10px;
+        &__image{
+            margin-top: 50px;
+            height: 65px;
+            width: 80px;
+        }
+        &__footer-text{
+            margin-top: 5px;
+            font-size: 10px;
+        }
     }
 }
