--- a/app/assets/stylesheets/exhibit.scss
+++ b/app/assets/stylesheets/exhibit.scss
@@ -176,21 +176,25 @@ body{
         &__category-section{
             border-top: 1px solid #eee;
             background: #fff;
-            height: calc(100% - 120px);
+            height: calc(100% - 130px);
             padding-right: 40px;
             padding-left: 40px;
             &__sub-head{
                 margin-top: 40px;
+                font-weight: 600;
                 float: left;
                 color: #888;
                 font-size: 14px;
+                &__icon{
+                    color: rgb(0, 153, 232);
                 }
+            }
             &__category-box{
                 float: right;
                 width: 400px;
                 &__tag{
                     margin-top: 40px;
-                    width: 120px;
+                    width: 140px;
                     font-size: 15px;
                     font-weight: 600;
                     .form-require{
@@ -230,10 +234,98 @@ body{
                 }
             }
         }
+        &__price-section{
+            float: right;
+            margin-top: 50px;
+            // background: lightblue;
+            height: 200px;
+            width: 400px;
+            position: relative;
+            &__price-box-left{
+                padding-top: 10px;
+                height: 80px;
+                width: 30px;
+                margin-right: 8px;
+                font-weight: 600;
+                font-size: 14px;
+                float: left;
+                .form-require{
+                    background: #ea352d;
+                    padding: 2px 4px;
+                    border-radius: 2px;
+                    color: #fff;
+                    font-size: 12px;
+                    vertical-align: top;
+                    float: right;
+                    position: absolute;
+                    left: 40px;
+                    top: 10px;
+                }
+            }
+            &__price-box-right{
+                width: 250px;
+                height: 80px;
+                float: right;
+                font-size: 12px;
+                &__text{
+                    position: absolute;
+                    top: 14px;
+                    left: 212px;
+                }
+                &__price-form{
+                    height: 46px;
+                    width: 150px;
+                    border-radius: 4px;
+                    border: 1px solid #ccc;
+                    background: #fff;
+                    line-height: 1.5;
+                    font-size: 16px;
+                    float: right;
+                    text-align: right;
+                    padding-right: 20px;
+                }
+            }
+            &__border{
+                margin-top: 60px;
+                width: 400px;
+                height: 20px;
+                border-bottom: 1px solid #ccc;
+            }
+            &__fee-left{
+                float: left;
+                padding: 30px 0 20px 0;
+                font-size: 13px;
+                position: absolute;
+            }
+            &__fee-right{
+                float: right;
+                padding: 30px 0 20px 0;
+                font-size: 13px;
+            }
+            &__result-left{
+                margin-top: 30px;
+                font-size: 16px;
+                font-weight: 600;
+                float: left;
+
+            }
+            &__result-right{
+                margin-top: 30px;
+                font-size: 26px;
+                font-weight: 600;
+                float: right;
+            }
+        }
     }
 }
 
+#delivery{
+    height: calc(100% - 250px);
+}
 
+#fee{
+    height: calc(100% - 400px);
+}
 
 
 
@@ -243,7 +335,7 @@ body{
 
 // ここからフッター
 footer{
-    top: 2000px; 
+    top: 3000px; 
     left: 650px;
     position: absolute;
     height: 250px;
